<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/footer_height"
    android:background="@color/dark_brown_navbar">

    <ImageView
        android:id="@+id/nav_home"
        android:layout_width="@dimen/nav_icon_size"
        android:layout_height="@dimen/nav_icon_size"
        android:padding="@dimen/nav_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_home"
        android:src="@drawable/sel_home"
        app:tint="@color/nav_icon_tint"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav_discover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <ImageView
        android:id="@+id/nav_discover"
        android:layout_width="@dimen/nav_icon_size"
        android:layout_height="@dimen/nav_icon_size"
        android:padding="@dimen/nav_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_discover"
        android:src="@drawable/sel_discover"
        app:tint="@color/nav_icon_tint"
        app:layout_constraintStart_toEndOf="@id/nav_home"
        app:layout_constraintEnd_toStartOf="@id/nav_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/nav_list"
        android:layout_width="@dimen/nav_icon_size"
        android:layout_height="@dimen/nav_icon_size"
        android:padding="@dimen/nav_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_list"
        android:src="@drawable/sel_list"
        app:tint="@color/nav_icon_tint"
        app:layout_constraintStart_toEndOf="@id/nav_discover"
        app:layout_constraintEnd_toStartOf="@id/nav_favourites"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/nav_favourites"
        android:layout_width="@dimen/nav_icon_size"
        android:layout_height="@dimen/nav_icon_size"
        android:padding="@dimen/nav_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_favourites"
        android:src="@drawable/sel_favourites"
        app:tint="@color/nav_icon_tint"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toEndOf="@id/nav_list"
        app:layout_constraintEnd_toStartOf="@id/nav_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/nav_profile"
        android:layout_width="@dimen/nav_icon_size"
        android:layout_height="@dimen/nav_icon_size"
        android:padding="@dimen/nav_icon_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_profile"
        android:src="@drawable/sel_profile"
        app:tint="@color/nav_icon_tint"
        app:layout_constraintStart_toEndOf="@id/nav_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
